# nmpc_ws

./: .gitignore  New File  bicycle_robot_acados_ocp.json
src/ack_nmpc_tracker_ros2/: package.xml  setup.cfg  setup.py
src/ack_nmpc_tracker_ros2/ack_nmpc_tracker_ros2/: __init__.py  ack_model_node.py  ack_nmpc_node.py  ack_robot_model.py  ack_robot_opt.py  cmd_vel_to_overlay.py  ref_pub.py
src/ack_nmpc_tracker_ros2/launch/: ack_real_tracking.launch.py  ack_simple_tracking.launch.py
src/ack_nmpc_tracker_ros2/rviz/: nmpc_test.rviz
src/diff_nmpc_tracker_ros2/: package.xml  setup.cfg  setup.py
src/diff_nmpc_tracker_ros2/diff_nmpc_tracker_ros2/: diff_nmpc_node.py  diff_robot_model.py  diff_robot_opt.py  ref_pub.py
src/diff_nmpc_tracker_ros2/launch/: diff_real_tracking.launch.py  diff_simple_tracking.launch.py
src/diff_nmpc_tracker_ros2/rviz/: nmpc_test.rviz
src/nmpc_tracker_ros2/: package.xml  setup.cfg  setup.py
src/nmpc_tracker_ros2/launch/: diff_simple_tracking.launch.py  real_tracking.launch.py  simple_tracking.launch.py
src/nmpc_tracker_ros2/nmpc_tracker_ros2/: diff_nmpc_node.py  diff_robot_model.py  diff_robot_opt.py  mobile_robot_opt.py  model_node.py  nmpc_node.py
src/nmpc_tracker_ros2/rviz/: nmpc_test.rviz
